test/parser/connect/120.in
// "120.in" -- testing creation connections, involving relaxed params
// copy-modified from "117.in"
// should fail during creation when we discover the error:

template <pint X><pint Y>
defproc foo() { }

template <pint Z>
defproc bar(foo<Z> a, b) { }

defproc ick(bar<3> y) { }

foo<3> x<2>;
foo<3> y<5>;
bar<3> p, q;
p(x, );
q(y, );
ick m(p), n(q);
m = n;
// error: ports are connected to aliases with different relaxed actuals!

